mengubah beberapa file

--- a/aspirasipage/aspirasi.html
+++ b/aspirasipage/aspirasi.html
@@ -118,6 +118,14 @@
                                     <span class="text-span">&nbsp;*</span>
                                 </h3>
                             </label>
+                            <select for="fakultas" name="paspirasi" id="fakultas" class="form-select mb-3" aria-label=".form-select-lg example" style="color: gray; width:100%; padding: 10px; border-color: lightgray; border-radius: 3px; margin-bottom: 1.5%;">
+                                <option value="paspirasi">Pilih Aspirasi Terkait</option>
+                                <option value="Finansial">Finansial</option>
+                                <option value="Akademis">Akademis</option>
+                                <option value="Fasilitas">Fasilitas</option>
+                                <option value="Ormawa">Ormawa</option>
+                              </select>
+
                         <textarea type="text" for="aspirasi" id="aspirasi" name="aspirasi" required></textarea>
                         <p>Aspirasi dapat berisi apa saja yang ingin anda sampaikan pada MPM Dan DPM IKM UNIKOM</p>
 
