--- a/profile/profile.html
+++ b/profile/profile.html
@@ -86,18 +86,18 @@ Sebagai lembaga legislatif mahasiswa, MPM UNIKOM dituntut harus mampu menuangkan
         <div class="container-fungsi2x">
           <div class="content-fungsi2x"data-aos="fade-up" data-aos-duration="1500">
             <h3>Aspirasi dan Advokasi</h3>
-            <a  class="fungsi-link" href="http://line.me/ti/p/~@JNS3442F" target="_blank"><i class="fas fa-info-circle"></i></a>
+            <a  class="fungsi-link" href="#" target="_blank"><i class="fas fa-info-circle"></i></a>
             <h4>MPM UNIKOM dapat mencari, mengumpulkan dan menjaring aspirasi mahasiswa Universitas Komputer Indonesia dan menindaklanjuti aspirasi atau masalah yang telah terkumpul dari mahasiswa Universitas Komputer Indonesia</h4>
           </div>
         <div class="container-fungsi3x">
           <div class="content-fungsi3x"data-aos="fade-up" data-aos-duration="1500">
             <h3>Legislasi</h3>
-            <a  class="fungsi-link" href="http://line.me/ti/p/~@JNS3442F" target="_blank"><i class="fas fa-balance-scale"></i></a>
+            <a  class="fungsi-link" href="#" target="_blank"><i class="fas fa-balance-scale"></i></a>
             <h4>MPM UNIKOM adalah lembaga yang berwenang mengeluarkan produk-produk hukum baru atau mengamandemen produk-produk hukum yang telah ada</h4>
           </div>
           <div class="content-fungsi3x"data-aos="fade-up" data-aos-duration="1500">
             <h3>Melantik Presiden dan Wakil presiden mahasiswa</h3>
-            <a  class="fungsi-link" href="http://line.me/ti/p/~@JNS3442F" target="_blank"><i class="fas fa-people-group"></i></a>
+            <a  class="fungsi-link" href="#" target="_blank"><i class="fas fa-people-group"></i></a>
             <h4>MPM UNIKOM berwenang melantik Presiden Mahasiswa dan Wakil Presiden Mahasiswa Badan Eksekutif Mahasiswa</h4>
           </div>
         </div>
