mengubah beberapa file

--- a/aspirasipage/aspirasi.html
+++ b/aspirasipage/aspirasi.html
@@ -124,6 +124,7 @@
                                 <option value="Akademis">Akademis</option>
                                 <option value="Fasilitas">Fasilitas</option>
                                 <option value="Ormawa">Ormawa</option>
+                                <option value="Lainya">Lainya</option>
                               </select>
 
                         <textarea type="text" for="aspirasi" id="aspirasi" name="aspirasi" required></textarea>
