--- a/beranda/beranda.html
+++ b/beranda/beranda.html
@@ -124,7 +124,7 @@
           <p>Student government merujuk pada konsep kelembagaan dan proses pelaksanaan pemerintahan di tingkat universitas. Hal itu disebut oleh Grezia Eleganza Nur Pradani dalam paper­-nya berjudul Gerakan Sosial di Indonesia : Studi Kasus Gerakan Mahasiswa Tahun 1974 (2014:3). Asumsinya, kampus adalah sebuah negara, maka perlu adanya suatu pengaturan di tingkat mahasiswa untuk meningkatkan kehidupan demokratis.</p>
           <br>
           <p>
-            Tak banyak studi yang membahas mengenai student government. Abdul Gaffar Karim, seorang dosen konsentrasi Ilmu Pemerintahan FISIPOL UGM, menemukan pembahahasan tersebut dalam buku Miller dan Nadler yang berjudul Student Governance and Institutional Policy: Formation and Implementation (2006).
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse, laborum veritatis deleniti cum exercitationem iste earum at quisquam mollitia pariatur illo adipisci id aut magni ducimus rem atque ullam voluptates quibusdam ipsam nihil maiores. Eius quaerat ipsa culpa eum fugiat animi adipisci commodi quo porro. Voluptatibus sint, quod repudiandae magnam accusantium quos vitae ipsam amet repellat ut iste labore!
           </p>
           <br>
           <a class="button_sejarah" href="#">Baca Selengkapnya</a>
