--- a/beranda/beranda.html
+++ b/beranda/beranda.html
@@ -121,7 +121,7 @@
         </div>
         <div class="sejarah-isi">
           <header>Sejarah <span style="color: red;">Ikatan Keluarga Mahasiswa Unikom (IKMU) </span></header>
-          <p>Student government merujuk pada konsep kelembagaan dan proses pelaksanaan pemerintahan di tingkat universitas. Hal itu disebut oleh Grezia Eleganza Nur Pradani dalam paper­-nya berjudul Gerakan Sosial di Indonesia : Studi Kasus Gerakan Mahasiswa Tahun 1974 (2014:3). Asumsinya, kampus adalah sebuah negara, maka perlu adanya suatu pengaturan di tingkat mahasiswa untuk meningkatkan kehidupan demokratis.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, dolor excepturi. Soluta vitae expedita eos. Sed eaque eos fuga maxime dicta dignissimos, non repellat hic facere cupiditate ea eum qui accusantium, repudiandae assumenda quos quaerat! Molestias doloremque numquam iste quibusdam similique quidem commodi. Dolore perspiciatis ut voluptas iste, veritatis blanditiis!</p>
           <br>
           <p>
            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum esse, laborum veritatis deleniti cum exercitationem iste earum at quisquam mollitia pariatur illo adipisci id aut magni ducimus rem atque ullam voluptates quibusdam ipsam nihil maiores. Eius quaerat ipsa culpa eum fugiat animi adipisci commodi quo porro. Voluptatibus sint, quod repudiandae magnam accusantium quos vitae ipsam amet repellat ut iste labore!
